--- a/frontend/app/views/questions/_question.html.haml
+++ b/frontend/app/views/questions/_question.html.haml
@@ -1,5 +1,5 @@
 %tr
-  %td= h(question.text)
+  %td= h(question.title)
   %td= h(question.question_type)
   %td.action= link_to(image_tag('/images/answer.png', :alt => 'odpowiedzi', :title => "Odpowiedzi do pytania #{h(question.text)}"), resource(question.poll, question, :results), :class => 'image-link')
   %td.action= link_to(image_tag('/images/edit.png', :alt => 'edytuj'), resource(question.poll, question, :edit), :class => 'image-link')
