--- a/frontend/app/views/questions/_question.html.haml
+++ b/frontend/app/views/questions/_question.html.haml
@@ -6,7 +6,9 @@
   %td.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(question.poll, question, :delete), :class => 'image-link delete-question')
 - if question.choice?
   %td
-  %td= "Odpowiedzi"
+  %td
+    = "Odpowiedzi"
+    = partial("possible_answers/form", :question => question)
   %td{:colspan => 3}
     - question.possible_answers.each do |answer|
       = h(answer)
