--- a/frontend/app/views/questions/_question.html.haml
+++ b/frontend/app/views/questions/_question.html.haml
@@ -5,11 +5,11 @@
   %td.action= link_to(image_tag('/images/edit.png', :alt => 'edytuj'), resource(question.poll, question, :edit), :class => 'image-link')
   %td.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(question.poll, question, :delete), :class => 'image-link delete-question')
 - if question.choice?
+  - p question
   %td
-  %td
-    = "Odpowiedzi"
     = partial("possible_answers/form", :question => question)
-  %td{:colspan => 3}
-    - question.possible_answers.each do |answer|
+  %td{:colspan => 4}
+    - question.possible_answers.each_with_index do |answer, index|
       = h(answer)
+      = link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => "Usuń #{h(answer)}"), url(:controller => :possible_answers, :question_id => question.id, :answer_id => index, :action => :delete), :class => 'image-link delete-question')
       %br
