Student moze udzielac odpowiedzi na pytania wyboru

--- a/frontend/app/views/questions/_question_answer.html.haml
+++ b/frontend/app/views/questions/_question_answer.html.haml
@@ -3,5 +3,9 @@
     = text_field :name => question.id, :label => question.title, :value => h(params[question.id.to_s])
     %span.validation.error
       = question.errors.on(:value)
+  - if question.choice?
+    = select(:name => question.id, :label => question.title, :collection => question.possible_answers.map{|x| h(x)}, :selected => params[question.id], :prompt => "")
+    %span.validation.error
+      = question.errors.on(:value)
   - if question.closed?
-    = select(:name => question.id, :label => question.title, :collection => "1".."5", :selected => params[question.id])
+    = select(:name => question.id, :label => question.title, :collection => "1".."5", :selected => params[question.id])  
