--- a/frontend/app/views/layout/anonymous.html.haml
+++ b/frontend/app/views/layout/anonymous.html.haml
@@ -7,6 +7,7 @@
       = partial 'layout/flash'
       #header
         %a.logo{ :href => "#" }
+          =image_tag('/images/logo.png', :id => 'logo')
           Cyfrowy Dorsz
         .sublogo
           system do ankietowania
