--- a/frontend/app/views/layout/_menu.html.haml
+++ b/frontend/app/views/layout/_menu.html.haml
@@ -7,3 +7,6 @@
       %li
         =image_tag("/images/add.png", :id => 'add-poll')
         =link_to("Dodaj ankietę", resource(:polls, :new))
+      %li
+        =link_to("Profil", resource(:users, :profile))
+    
