--- a/frontend/app/views/rankings/index.html.haml
+++ b/frontend/app/views/rankings/index.html.haml
@@ -2,8 +2,10 @@
 %table.custom
   %tr
     %th= 'Prowadzący'
+    %th= 'E-mail'
     %th= 'Ranking'
   - @users.each do |user|
     %tr
+      %td= "#{user.name} #{user.surname}"
       %td= user.email
       %td= user.ranking
