--- a/frontend/app/views/possible_answers/_form.html.haml
+++ b/frontend/app/views/possible_answers/_form.html.haml
@@ -1,6 +1,9 @@
 = form(:action => resource(question.poll, question, :possible_answers), :method => :post) do
   %fieldset
   .ctrl
-    = text_field(:text, :label => "Nowa odpowiedź", :name => "answer")
+    - if question.choice?
+      = text_field(:text, :label => "Nowa odpowiedź", :name => "answer")
+    - if question.teacher?
+      = select(:name => "answer", :label => "Nowy prowadzący", :collection => question.possible_teachers)
   .ctrl.buttons
     = submit("Dodaj odpowiedź")
