--- a/frontend/app/views/questions/_question.html.haml
+++ b/frontend/app/views/questions/_question.html.haml
@@ -4,11 +4,11 @@
   %td.action= link_to(image_tag('/images/answer.png', :alt => 'odpowiedzi', :title => "Odpowiedzi do pytania #{h(question.text)}"), resource(question.poll, question, :results), :class => 'image-link')
   %td.action= link_to(image_tag('/images/edit.png', :alt => 'edytuj'), resource(question.poll, question, :edit), :class => 'image-link')
   %td.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(question.poll, question, :delete), :class => 'image-link delete-question')
-- if question.choice?
+- if question.choice? || question.teacher?
   %td
     = partial("possible_answers/form", :question => question)
   %td{:colspan => 4}
-    - question.possible_answers.each_with_index do |answer, index|
+    - question.formatted_possible_answers.each_with_index do |answer, index|
       = h(answer)
       = link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => "Usuń #{h(answer)}"), url(:controller => :possible_answers, :question_id => question.id, :answer_id => index, :action => :delete), :class => 'image-link delete-question')
       %br
