--- a/frontend/app/views/questions/_form.html.haml
+++ b/frontend/app/views/questions/_form.html.haml
@@ -4,7 +4,7 @@
     %span.validation.error
       = @question.errors.on(:text)
   .ctrl
-    = select(:question_type, :label => "Typ pytania", :collection => Question::TYPES.values)
+    = select(:question_type, :label => "Typ pytania", :collection => @question_types)
     %span.validation.error
       = @question.errors.on(:question_type)
   .ctrl.buttons
