Zaimplementowana mozliwosc zmieniania kolejnosci pytan w ankiecie

--- a/frontend/app/views/layout/_head.html.haml
+++ b/frontend/app/views/layout/_head.html.haml
@@ -7,6 +7,6 @@
 %title
   cyfrowy dorsz
 = js_include_tag 'vendor/jquery', 'vendor/jquery-ui-1.8.2.custom.min', 'vendor/visualize/excanvas', 'vendor/visualize/visualize.jQuery', :bundle => 'ankieter-vendor.js'
-= js_include_tag 'menu', 'application', :bundle => 'ankieter.js'
+= js_include_tag 'menu', 'application', 'extensions', :bundle => 'ankieter.js'
 = css_include_tag 'master', :bundle => 'ankieter.css'
 = css_include_tag 'vendor/jquery-ui-1.8.2.custom', 'vendor/visualize/visualize', 'vendor/visualize/visualize-light', :bundle => 'ankieter-vendor.css'
