--- a/frontend/public/stylesheets/master.css
+++ b/frontend/public/stylesheets/master.css
@@ -30,7 +30,9 @@ a {
   -moz-border-radius: 5px;
   display: block;
   padding: 2px;
+  height: 28px;
 }
+
 
 h1 {
   font-size: 20px;
@@ -362,6 +364,55 @@ form#login-form .buttons input {
   font-size: 10px;
   text-align: center;
   padding: 5px 0;
+}
+
+#content ul#questions {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  clear: both;
+}
+
+#content ul#questions li {
+  clear: both;
+  height: 32px;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+
+#content ul#questions li span, #questions-headers span {
+  padding: 0 10px;
+  text-align: center;
+  background: #C8F0A1;
+  -moz-border-radius: 5px;
+  border: 1px solid #799C57;
+  float: left;
+  height: 32px;
+  line-height: 32px;
+}
+
+#content ul#questions li span.title, #questions-headers span.title {
+  width: 180px;
+}
+
+#content ul#questions li span.type, #questions-headers span.type {
+  width: 120px;
+}
+
+#content #questions-headers span {
+  font-weight: bold;
+  font-size: 13px;
+  background: #ACD980;
+  padding: 5px 10px;
+}
+
+#content ul#questions li span.action {
+  padding: 0 3px;
+}
+
+#content ul#questions li span.action:hover {
+  background: #8FC400;
 }
 
 #content table.custom th, td {
