--- a/frontend/app/views/possible_answers/_form.html.haml
+++ b/frontend/app/views/possible_answers/_form.html.haml
@@ -1,6 +1,6 @@
-= form(:action => resource(question.poll, question, :possible_answers), :method => :post) do
+= form(:action => resource(question.poll, question, :possible_answers), :method => :post, :id => 'possible-answers-form') do
   %fieldset
-  .ctrl
-    = text_field(:text, :label => "Nowa odpowiedź", :name => "answer")
-  .ctrl.buttons
-    = submit("Dodaj odpowiedź")
+    .ctrl
+      = text_field(:text, :label => "Nowa odpowiedź", :name => "answer")
+    .ctrl.buttons
+      = submit("Dodaj odpowiedź")
