--- a/frontend/public/stylesheets/master.css
+++ b/frontend/public/stylesheets/master.css
@@ -304,7 +304,7 @@ select {
   -moz-border-radius: 5px;
 }
 
-label {
+label, span.label {
   color: #5B7A00;
   font-weight: bold;
   width: 200px;
@@ -366,14 +366,14 @@ form#login-form .buttons input {
   padding: 5px 0;
 }
 
-#content ul#questions {
+#content ul.custom {
   list-style: none;
   margin: 0;
   padding: 0;
   clear: both;
 }
 
-#content ul#questions li {
+#content ul.custom li {
   clear: both;
   height: 32px;
   margin: 0;
@@ -381,7 +381,7 @@ form#login-form .buttons input {
   cursor: pointer;
 }
 
-#content ul#questions li span, #questions-headers span {
+#content ul.custom li span, .custom-headers span {
   padding: 0 10px;
   text-align: center;
   background: #C8F0A1;
@@ -392,26 +392,26 @@ form#login-form .buttons input {
   line-height: 32px;
 }
 
-#content ul#questions li span.title, #questions-headers span.title {
+#content ul.custom li span.title, .custom-headers span.title {
   width: 180px;
 }
 
-#content ul#questions li span.type, #questions-headers span.type {
+#content ul.custom li span.type, .custom-headers span.type {
   width: 120px;
 }
 
-#content #questions-headers span {
+#content .custom-headers span {
   font-weight: bold;
   font-size: 13px;
   background: #ACD980;
   padding: 5px 10px;
 }
 
-#content ul#questions li span.action {
+#content ul.custom li span.action {
   padding: 0 3px;
 }
 
-#content ul#questions li span.action:hover {
+#content ul.custom li span.action:hover {
   background: #8FC400;
 }
 
