Drobne zmiany w menu/poprawki wygladu w calej aplikacji

--- a/frontend/app/views/users/request_reset_password.html.haml
+++ b/frontend/app/views/users/request_reset_password.html.haml
@@ -3,5 +3,5 @@
   %fieldset
     %legend= "Pod poniższy email przesłany zostanie link służący do resetowania hasła."
     .ctrl= text_field(:name => "email", :label => "Email")
-    .ctrl.buttons= button("Wyślij")
+    .ctrl.buttons= submit("Wyślij")
 
