--- a/frontend/app/views/layout/_menu.html.haml
+++ b/frontend/app/views/layout/_menu.html.haml
@@ -1,12 +1,12 @@
 %ul#menu
   %li.active
-    =link_to("Zarządzaj", resource(:polls))
+    =link_to("Ankiety", resource(:polls))
     %ul
       %li
         =link_to("Lista ankiet", resource(:polls))
       %li
         =image_tag("/images/add.png", :id => 'add-poll')
         =link_to("Dodaj ankietę", resource(:polls, :new))
-      %li
-        =link_to("Profil", resource(:users, :profile))
+  %li
+    =link_to("Profil", resource(:users, :profile))
     
