--- a/frontend/app/views/questions/edit.html.haml
+++ b/frontend/app/views/questions/edit.html.haml
@@ -1,5 +1,5 @@
 = form_for(@question, :action => resource(@poll, @question), :id => "edit-question-form") do
   = partial('questions/form', :poll => @poll)
 
-- if @question.choice?
+- if @question.choice? || @question.teacher?
   = partial("possible_answers/form", :question => @question)
