--- a/frontend/app/views/questions/_question_answer.html.haml
+++ b/frontend/app/views/questions/_question_answer.html.haml
@@ -3,8 +3,10 @@
     = text_field :name => question.id, :label => question.title, :value => h(params[question.id.to_s])
     %span.validation.error
       = question.errors.on(:value)
-  - if question.choice? || question.teacher?
-    = select(:name => question.id, :label => question.title, :collection => question.formatted_possible_answers.map{|x| h(x)}, :selected => params[question.id], :prompt => "Wybierz odpowiedź")
+  - if question.choice?
+    = select(:name => question.id, :label => question.title, :collection => question.selectable_possible_answers.map{|x| h(x)}, :selected => params[question.id], :prompt => "Wybierz odpowiedź")
+  - if question.teacher?
+    = select(:name => question.id, :label => question.title, :collection => question.selectable_possible_answers.map{|x| [x.first, h(x.last)]}, :selected => params[question.id], :prompt => "Wybierz odpowiedź")
     %span.validation.error
       = question.errors.on(:value)
   - if question.closed?
