--- a/frontend/app/views/tokens/index.html.haml
+++ b/frontend/app/views/tokens/index.html.haml
@@ -1,5 +1,5 @@
 %h1= "Tokeny dla ankiety <span class='name'>'#{h(@poll.name)}'</span>"
-
+= link_to 'Powrot do ankiety', resource(@poll, :edit)
 = link_to("Generuj nowe tokeny", resource(@poll, :tokens, :generate), "method" => "post")
 
 %table.custom
