--- a/frontend/app/views/questions/edit.html.haml
+++ b/frontend/app/views/questions/edit.html.haml
@@ -1,3 +1,5 @@
+= link_to 'Powrot do ankiety', resource(@poll, :edit)
+
 = form_for(@question, :action => resource(@poll, @question), :id => "edit-question-form") do
   = partial('questions/form', :poll => @poll)
 
