filtrowanie po prowadzocych wyswietla sie w odpowiednich momentach, komunikat o mozliwosci dodania prowadzacego

--- a/frontend/app/views/results/_teacher_filter_form.html.haml
+++ b/frontend/app/views/results/_teacher_filter_form.html.haml
@@ -1,7 +1,11 @@
 = form(:action => action, :method => :get) do
-  %fieldset
-    .ctrl
-      = select(:name => "teacher_id", :label => "Pokaż odpowiedzi dla tego prowadzącego", :collection => @teachers, :prompt => "Wszyscy")
-    .ctrl.buttons
-      = submit("Pokaż")
+  - if @teachers.empty?
+    %p Możesz dodać pytanie o prowadzącego aby filtrować wyniki.
+  - else
+    %fieldset
+      .ctrl
+        = select(:name => "teacher_id", :label => "Pokaż odpowiedzi dla tego prowadzącego", :collection => @teachers, :prompt => "Wszyscy")
+      .ctrl.buttons
+        = submit("Pokaż")
+
     
