Token should not expire after invalid answers submission Validation errors should be visible

--- a/frontend/app/views/answers/show.html.haml
+++ b/frontend/app/views/answers/show.html.haml
@@ -3,8 +3,8 @@
 %h3= "Typ zajęć: #{@token.poll.poll_type}"
 = form :action => url(:controller => "answers", :action => "save_answer") do
   %fieldset
-    - @token.poll.questions.each do |question|
-      = partial 'questions/question_answer', :question => question
+    - @question_answers.each do |question, question_answer|
+      = partial 'questions/question_answer', :question => question, :question_answer => question_answer
     = hidden_field :name => "token", :value => @token.value
     .ctrl.buttons
       = submit "Wyślij odpowiedzi"
