--- a/frontend/app/views/questions/_form.html.haml
+++ b/frontend/app/views/questions/_form.html.haml
@@ -8,13 +8,17 @@
     = select(:question_type, :label => "Typ pytania", :collection => @question_types)
     %span.validation.error
       = @question.errors.on(:question_type)
-  - if @question.choice? || @question.teacher?
+  - if (@question.choice? || @question.teacher?) && @question.formatted_possible_answers && !@question.formatted_possible_answers.empty?
     %span.custom-headers.label= 'Możliwe odpowiedzi'
     %ul.custom
       - @question.formatted_possible_answers.each_with_index do |answer, index|
         %li
           %span.title= h(answer)
           %span.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => "Usuń #{h(answer)}"), url(:controller => :possible_answers, :question_id => @question.id, :answer_id => index, :action => :delete), :class => 'image-link delete-posiible-answer')
+  .ctrl#possible_answer_ctrl{ :style => "#{@question.choice? ? 'display:static' : 'display:none'}" }
+    = text_field(:possible_answer, :label => "Mozliwa odpowiedz")
+    %span.validation.error
+      = @question.errors.on(:possible_answer)
   .ctrl.buttons
     = submit("Zapisz pytanie")
 
