--- a/frontend/app/views/questions/_form.html.haml
+++ b/frontend/app/views/questions/_form.html.haml
@@ -5,7 +5,7 @@
       = @question.errors.on(:text)
       = @question.errors.on([:poll_id, :text])
   .ctrl
-    = select(:question_type, :label => "Typ pytania", :collection => @question_types)
+    = select(:question_type, :label => "Typ pytania", :collection => @question_types, :selected => Question::TYPES[:choice])
     %span.validation.error
       = @question.errors.on(:question_type)
   - if (@question.choice? || @question.teacher?) && @question.formatted_possible_answers && !@question.formatted_possible_answers.empty?
