--- a/frontend/app/views/questions/_form.html.haml
+++ b/frontend/app/views/questions/_form.html.haml
@@ -5,7 +5,7 @@
       = @question.errors.on(:text)
       = @question.errors.on([:poll_id, :text])
   .ctrl
-    = select(:question_type, :label => "Typ pytania", :collection => @question_types, :selected => Question::TYPES[:choice])
+    = select(:question_type, :label => "Typ pytania", :collection => @question_types)
     %span.validation.error
       = @question.errors.on(:question_type)
   - if (@question.choice? || @question.teacher?) && @question.formatted_possible_answers && !@question.formatted_possible_answers.empty?
@@ -15,10 +15,17 @@
         %li
           %span.title= h(answer)
           %span.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => "Usuń #{h(answer)}"), url(:controller => :possible_answers, :question_id => @question.id, :answer_id => index, :action => :delete), :class => 'image-link delete-posiible-answer')
+
   .ctrl#possible_answer_ctrl{ :style => "#{@question.choice? ? 'display:static' : 'display:none'}" }
     = text_field(:possible_answer, :label => "Mozliwa odpowiedz")
     %span.validation.error
       = @question.errors.on(:possible_answer)
+
+  .ctrl#teacher_ctrl{ :style => "#{(@question.new? && @question.teacher?) ? 'display:static' : 'display:none'}" }
+    = select(:teacher, :label => "Prowadzący", :collection => @question.possible_teachers)
+    %span.validation.error
+      = @question.errors.on(:teacher)
+
   .ctrl.buttons
     = submit("Zapisz pytanie")
 
