--- a/frontend/app/views/questions/edit.html.haml
+++ b/frontend/app/views/questions/edit.html.haml
@@ -1,7 +1,1 @@
-= link_to 'Powrot do ankiety', resource(@poll, :edit)
-
-= form_for(@question, :action => resource(@poll, @question), :id => "edit-question-form") do
-  = partial('questions/form', :poll => @poll)
-
-- if @question.choice? || @question.teacher?
-  = partial("possible_answers/form", :question => @question)
+= partial 'edit'
