--- a/frontend/app/views/questions/_question.html.haml
+++ b/frontend/app/views/questions/_question.html.haml
@@ -2,8 +2,9 @@
   %span.title= h(question.title)
   %span.type= h(question.question_type)
   %span.action= link_to(image_tag('/images/answer.png', :alt => 'odpowiedzi', :title => "Odpowiedzi do pytania #{h(question.text)}"), resource(question.poll, question, :results), :class => 'image-link')
-  -if question.locked?
+  -if question.poll.locked?
     %span.action= image_tag('/images/edit_gray.png', :alt => 'odpowiedzi', :title => 'Udzielono juz odpowiedzi. Edycja jest niemożliwa.')
+    %span.action= image_tag('/images/delete_gray.png', :alt => 'usuń', :title => 'Udzielono juz odpowiedzi. Nie można usunąć pytania.')
   -else
     %span.action= link_to(image_tag('/images/edit.png', :alt => 'edytuj'), resource(question.poll, question, :edit), :class => 'image-link', :title => "Edytuj #{h(question.text)}")
-  %span.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(question.poll, question, :delete), :class => 'image-link delete-question')
+    %span.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(question.poll, question, :delete), :class => 'image-link delete-question')
