admin moze blokowac ankiety uzytkownikow

--- a/frontend/app/views/users/new.html.haml
+++ b/frontend/app/views/users/new.html.haml
@@ -9,3 +9,5 @@
         = @user.errors.on(:email)
     .ctrl.buttons
       = submit("Stwórz")
+
+= link_to 'Blokuj ankiety', resource(:users, :admin)
