--- a/frontend/app/views/polls/edit.html.haml
+++ b/frontend/app/views/polls/edit.html.haml
@@ -14,6 +14,10 @@
 .custom-headers
   %span.title= 'Tekst pytania'
   %span.type= 'Rodzaj pytania'
+  -if @poll.visible?
+    %span.action= link_to(image_tag('/images/visible.png', :alt => 'Ukryj ankietę.', :title => 'Ukryj ankietę.'), resource(@poll, :hide), :class => 'image-link')
+  -else
+    %span.action= link_to(image_tag('/images/invisible.png', :alt => 'Pokaż ankietę.', :title => 'Pokaż ankietę.'), resource(@poll, :show), :class => 'image-link')
 %ul.custom.sortable{ :id => 'questions', 'data-poll-id' => "#{@poll.id}"}
   - @questions.each do |question|
     = partial 'questions/question', :question => question
