It's possible to change poll name

--- a/frontend/app/views/polls/edit.html.haml
+++ b/frontend/app/views/polls/edit.html.haml
@@ -4,6 +4,8 @@
   = form_for(@poll, :action => resource(@poll), :method => :put) do
     %fieldset
       .ctrl_textarea
+        = text_field :name, :label => "Nazwa"
+      .ctrl_textarea
         = text_area :thankyou, :label => "Tekst podziękowania"
       .ctrl.buttons
         = submit "Zmień"
