--- a/frontend/app/views/polls/edit.html.haml
+++ b/frontend/app/views/polls/edit.html.haml
@@ -8,7 +8,7 @@
 -if !@poll.locked?
   = form_for(@poll, :action => resource(@poll), :method => :put) do
     %fieldset
-      .ctrl_textarea
+      .ctrl
         = text_field :name, :label => "Nazwa"
       .ctrl_textarea
         = text_area :thankyou, :label => "Tekst podziękowania"
